commented web scrape

--- a/static/Resources/NY_Times_scraper.ipynb
+++ b/static/Resources/NY_Times_scraper.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import dependencies\n",
     "from splinter import Browser\n",
     "from splinter.exceptions import ElementDoesNotExist\n",
     "from bs4 import BeautifulSoup\n",
@@ -314,13 +315,14 @@
     }
    ],
    "source": [
+    "# hard code date events\n",
     "months=['01','02','03','04','05','06','07','08','09']\n",
     "days=['01','02','03','04','05','06','07','08','09','10', '11', '12','13','14', '15','16','17','18','19','20','21','22','23','24','25','26','27','28','29','30','31']\n",
     "daily_articles=[]\n",
-    "\n",
+    "# establish browser\n",
     "executable_path = {'executable_path': '/usr/local/bin/chromedriver'}\n",
     "browser = Browser('chrome', **executable_path, headless=True)\n",
-    "\n",
+    "# pass dates through web scraper\n",
     "for month in months:\n",
     "    try:\n",
     "        monthly_url=f'https://www.nytimes.com/issue/todayspaper/2020/{month}/'\n",
@@ -328,7 +330,7 @@
     "            url = f'{monthly_url}{x}/todays-new-york-times'\n",
     "            browser.visit(url)\n",
     "            time.sleep(1)\n",
-    "#             time.sleep(4)\n",
+    "#             time.sleep(4) aides browser capacity\n",
     "            html = browser.html\n",
     "            soup = BeautifulSoup(html, 'html.parser')\n",
     "            date_div=soup.find('div', class_='css-1vd26hw')\n",
@@ -343,9 +345,10 @@
     "            }\n",
     "            daily_articles.append(article)\n",
     "            print(date)\n",
-    "            \n",
+    "#             leave an exception marker to account for variant day counts\n",
     "    except:\n",
     "        print('too many days')\n",
+    "#         double ckeck url for any mistakes in loading\n",
     "        print(url)\n"
    ]
   },
@@ -551,7 +554,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ny_times.to_csv('headlines.csv')"
+    "# export to for database application\n",
+    "ny_times.to_csv('headlines.csv', index=False)"
    ]
   },
   {
